--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -32,18 +32,13 @@
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 0.5s ease;
 }
-#workspaces button.focused {
+#workspaces button.active {
     color: @text;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 #workspaces button.empty {
-    color: rgba(0,0,0,0);
-    border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
-}
-#workspaces button.empty.active {
-    color: @unfocus;
+    color: rgba(102, 102, 102, .5);
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
